[package]
name = "chattium-oxide-client"
description = "Chat client for chattium-oxide-server"
repository = "https://github.com/nabijaczleweli/chattium-oxide-client"
readme = "README.md"
keywords = ["chattium-oxide", "chat"]
license = "MIT"
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]


[dependencies]
chattium_oxide_lib = { git = "https://github.com/nabijaczleweli/chattium-oxide-lib.git" }
hyper = "0.7"
