[package]
name = "chattium-oxide-client"
description = "Chat client for chattium-oxide-server"
repository = "https://github.com/nabijaczleweli/chattium-oxide-client"
readme = "README.md"
keywords = ["chattium-oxide", "chat"]
license = "MIT"
# Also update in appveyor.yml and splash.rs
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]


[dependencies]
chattium_oxide_lib = { git = "https://github.com/nabijaczleweli/chattium-oxide-lib.git" }
bear-lib-terminal = "1.3.0"
yaml_file_handler = "0.1"
hyper = "0.9"
clap = "2.11"
time = "0.1"
